--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -12,8 +13,10 @@
   <section class="hero">
     <h2>Gir deg vinger</h2>
     <img src="redbull1.jpg" alt="Viser en orginal redbull" />
+    <input id="ageInput" placeholder="skriv alder">
   </section>
   <button>Hei</button>
+  <p id="message"></p>
 </body>
 
 </html>
